feat: add TS 119 602 identity equivalence
